# SGD

./: CMakeLists.txt  main.cpp
